# practica-0-4-you-lab

./: README.md  practica0.cabal  secret  stack.yaml
app/: Main.hs
src/LC/: Ciphers.hs  Lists.hs  Trees.hs
test/LC/: CiphersSpec.hs  ListsSpec.hs  TreesSpec.hs
