cabal-version:      2.4
name:               practica0
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
extra-source-files:
    README.md

library
    exposed-modules:  LC.Lists
                    , LC.Trees
                    , LC.Ciphers
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable practica0
    main-is:          Main.hs
    build-depends:
        base ^>=4.15.0.0,
        practica0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite practica0-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base ==4.*
                    , hspec ==2.*
                    , QuickCheck ==2.*
                    , practica0
    other-modules:    LC.CiphersSpec
                    , LC.ListsSpec
                    , LC.TreesSpec
    build-tool-depends: hspec-discover:hspec-discover == 2.*
